--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,22 @@
+@import '~antd/dist/antd.css';
+
+.title{
+  font-weight: bold;
+  font-size: 16px;
+}
+
+#components-layout-demo-top-side .logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
+}
+
+.site-layout-background {
+  background: #fff;
+}
+
 .App {
   text-align: center;
 }
